# wgpu-sigops

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  source.wgsl
src/: ed25519_eddsa.rs  gpu.rs  lib.rs  moduli.rs  precompute.rs  secp256k1_ecdsa.rs  secp256r1_ecdsa.rs  shader.rs
src/benchmarks/: ed25519_eddsa.rs  mod.rs  mont.rs  secp256k1_ecdsa.rs  secp256r1_ecdsa.rs
src/curve_algos/: coords.rs  ed25519_curve.rs  ed25519_eddsa.rs  mod.rs  precompute.rs  secp256k1_curve.rs  secp256k1_ecdsa.rs  secp256k1_mul.rs  secp256r1_curve.rs  secp256r1_ecdsa.rs  secp256r1_mul.rs
src/tests/: bigint_add_wide.rs  bigint_add_wide.wgsl  bigint_and_ff.rs  buffers.rs  bytes_to_limbs.rs  curve.rs  ecdsa.rs  ed25519_curve.rs  ed25519_eddsa.rs  ed25519_reduce_fr.rs  limbs_to_bytes.rs  mod.rs  mont.rs  multi_stage.rs  secp256k1_curve.rs  secp256k1_ecdsa.rs  secp256k1_glv.rs  secp256r1_curve.rs  secp256r1_ecdsa.rs  sha512.rs  test_template.md
src/wgsl/: benchmarks.wgsl  bigint.wgsl  bigint_and_ff_tests.wgsl  bytes_be_to_limbs_le.wgsl  bytes_be_to_limbs_le_tests.wgsl  constants.wgsl  curve.wgsl  curve_generators.wgsl  curve_recover_affine_ys_tests.wgsl  curve_scalar_mul_tests.wgsl  curve_strauss_shamir_mul_tests.wgsl  curve_tests.wgsl  ecdsa.wgsl  ecdsa_tests.wgsl  ed25519_compressed_y_to_eteprojective_tests.wgsl  ed25519_constants.wgsl  ed25519_curve.wgsl  ed25519_curve_strauss_shamir_mul_tests.wgsl  ed25519_eddsa.wgsl  ed25519_eddsa_tests.wgsl  ed25519_reconstruct_ete_from_uncompressed_y_tests.wgsl  ed25519_reduce_fr.wgsl  ed25519_utils.wgsl  ed25519_verify_tests.wgsl  ff.wgsl  limbs_le_to_u32s_be.wgsl  mont.wgsl  mont_sqrt_case3mod4_tests.wgsl  mont_tests.wgsl  secp256k1_curve.wgsl  secp256k1_curve_generators.wgsl  secp256k1_curve_recover_affine_ys_tests.wgsl  secp256k1_curve_scalar_mul_tests.wgsl  secp256k1_curve_strauss_shamir_mul_tests.wgsl  secp256k1_curve_tests.wgsl  secp256k1_ecdsa.wgsl  secp256k1_ecdsa_benchmarks.wgsl  secp256k1_ecdsa_tests.wgsl  secp256r1_curve.wgsl  secp256r1_curve_generators.wgsl  (+11 more)
src/wgsl/main/: ed25519_eddsa_main.wgsl  ed25519_eddsa_main_0.wgsl  ed25519_eddsa_main_1.wgsl  ed25519_eddsa_main_2.wgsl  ed25519_eddsa_main_3.wgsl  ed25519_eddsa_main_4.wgsl  ed25519_eddsa_main_5.wgsl  ed25519_eddsa_main_6.wgsl  secp256k1_ecdsa_main.wgsl  secp256k1_ecdsa_main_0.wgsl  secp256k1_ecdsa_main_1.wgsl  secp256k1_ecdsa_main_2.wgsl  secp256k1_ecdsa_main_3.wgsl  secp256k1_ecdsa_main_4.wgsl  secp256r1_ecdsa_main.wgsl  secp256r1_ecdsa_main_0.wgsl  secp256r1_ecdsa_main_1.wgsl  secp256r1_ecdsa_main_2.wgsl  secp256r1_ecdsa_main_3.wgsl  secp256r1_ecdsa_main_4.wgsl
src/wgsl/tests/: bigint_and_ff_tests.wgsl  buffer_tests.wgsl  ed25519_compressed_y_to_eteprojective_tests.wgsl  ed25519_curve_strauss_shamir_mul_tests.wgsl  ed25519_curve_tests.wgsl  ed25519_eddsa_benchmarks.wgsl  ed25519_eddsa_tests.wgsl  (+16 more)
