[package]
name = "wgpu_secp256"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.15.0"
futures-intrusive = "0.5.0"
minijinja = "1.0.21"
num-bigint = { version = "0.4.4", features = ["rand"] }
wgpu = "0.19.4"
multiprecision = { git = "https://github.com/geometers/multiprecision.git" }

[dev-dependencies]
hex = "0.4.3"
serial_test = "3.1.0"
tokio = { version = "1.37.0", features = ["full"] }
rand_chacha = "0.3.1"
rand = "0.8.5"
stopwatch = "0.0.7"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-secp256k1 = "0.4.0"
fuel-algos = { path = "file://../../fuel_algos" }
fuel-crypto = "0.49.0"
bytemuck = "1.15.0"
