[package]
name = "wgpu_sig_ops"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.15.0"
futures-intrusive = "0.5.0"
minijinja = { version = "2.0.1", features = ["loader"] }
num-bigint = { version = "0.4.4", features = ["rand"] }
wgpu = "0.19.4"
multiprecision = { git = "https://github.com/geometers/multiprecision.git" }
ark-secp256k1 = "0.4.0"
ark-secp256r1 = "0.4.0"
ark-ed25519 = "0.4.0"
ark-ff = "0.4.0"
ark-ec = "0.4.0"
fuel-crypto = { version = "0.49.0", features = ["random", "test-helpers"] }
fuel-types = { version = "0.49.0" }
p256 = { version = "0.13.2" }
ed25519-dalek = { version = "2.0.0", default-features = false, features = ["rand_core"] }
curve25519-dalek = "4.0.0"
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
stopwatch = "0.0.7"
rand_chacha = "0.3.1"
rand = "0.8.5"
byteorder = "1.5.0"
hex = "0.4.3"
serial_test = "3.1.0"
tokio = { version = "1.37.0", features = ["full"] }
sha2 = { version = "0.10", default-features = false }
k256 =  { version = "0.13", default-features = false, features = ["digest", "ecdsa", "alloc"] }
secp256k1 = { version = "0.26", default-features = false, features = ["rand-std", "recovery"] }
crypto-bigint = { version = "0.5", default-features = false, features = ["rand_core", "generic-array", "zeroize"] }
